--- a/H&M cuerna post/Cube.html
+++ b/H&M cuerna post/Cube.html
@@ -949,7 +949,6 @@ if ('click' === 'click') {
 var el = document.getElementById('i91');
 
 
-
 if ('click' === 'click') {
     el.style.cursor = 'pointer';
 }
@@ -957,11 +956,15 @@ if ('click' === 'click') {
 
 /*#/#*//*#i236.i237.positioning.js:positioning/base/js.2*/
 bmShow('i236');
-/*#/#*//*#i236.i266.actions.js:actions/base/js.1*/
+/*#/#*//*#i236.i282.actions.js:actions/base/js.1*/
 /* Name: On Click; */
 var el = document.getElementById('i236');
 
-
+el.addEventListener('click', function(e){
+    /*#i282.i283.actions-clicktag.js:actions-clicktag/base/js.2*/
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG2')) : window.open(dhtml.getVar('clickTAG2', 'https://www.facebook.com/sharer/sharer.php?u= https://goo.gl/maps/Uo15jpoxB262'), dhtml.getVar('landingPageTarget', '_blank'));
+/*#/#*/
+});
 
 if ('click' === 'click') {
     el.style.cursor = 'pointer';
@@ -970,11 +973,15 @@ if ('click' === 'click') {
 
 /*#/#*//*#i238.i239.positioning.js:positioning/base/js.2*/
 bmShow('i238');
-/*#/#*//*#i238.i270.actions.js:actions/base/js.1*/
+/*#/#*//*#i238.i284.actions.js:actions/base/js.1*/
 /* Name: On Click; */
 var el = document.getElementById('i238');
 
-
+el.addEventListener('click', function(e){
+    /*#i284.i285.actions-clicktag.js:actions-clicktag/base/js.2*/
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'whatsapp://send?text=Mira lo que he encontrado  https://goo.gl/maps/Uo15jpoxB262'), dhtml.getVar('landingPageTarget', '_blank'));
+/*#/#*/
+});
 
 if ('click' === 'click') {
     el.style.cursor = 'pointer';
@@ -983,11 +990,15 @@ if ('click' === 'click') {
 
 /*#/#*//*#i240.i241.positioning.js:positioning/base/js.2*/
 bmShow('i240');
-/*#/#*//*#i240.i268.actions.js:actions/base/js.1*/
+/*#/#*//*#i240.i286.actions.js:actions/base/js.1*/
 /* Name: On Click; */
 var el = document.getElementById('i240');
 
-
+el.addEventListener('click', function(e){
+    /*#i286.i287.actions-clicktag.js:actions-clicktag/base/js.2*/
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG4')) : window.open(dhtml.getVar('clickTAG4', 'https://twitter.com/home?status=https://goo.gl/maps/Uo15jpoxB262'), dhtml.getVar('landingPageTarget', '_blank'));
+/*#/#*/
+});
 
 if ('click' === 'click') {
     el.style.cursor = 'pointer';
@@ -1066,11 +1077,15 @@ if ('click' === 'click') {
 
 /*#/#*//*#i242.i243.positioning.js:positioning/base/js.2*/
 bmShow('i242');
-/*#/#*//*#i242.i272.actions.js:actions/base/js.1*/
+/*#/#*//*#i242.i288.actions.js:actions/base/js.1*/
 /* Name: On Click; */
 var el = document.getElementById('i242');
 
-
+el.addEventListener('click', function(e){
+    /*#i288.i289.actions-clicktag.js:actions-clicktag/base/js.2*/
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG2')) : window.open(dhtml.getVar('clickTAG2', 'https://www.facebook.com/sharer/sharer.php?u= https://goo.gl/maps/Uo15jpoxB262'), dhtml.getVar('landingPageTarget', '_blank'));
+/*#/#*/
+});
 
 if ('click' === 'click') {
     el.style.cursor = 'pointer';
@@ -1079,11 +1094,15 @@ if ('click' === 'click') {
 
 /*#/#*//*#i244.i245.positioning.js:positioning/base/js.2*/
 bmShow('i244');
-/*#/#*//*#i244.i274.actions.js:actions/base/js.1*/
+/*#/#*//*#i244.i290.actions.js:actions/base/js.1*/
 /* Name: On Click; */
 var el = document.getElementById('i244');
 
-
+el.addEventListener('click', function(e){
+    /*#i290.i291.actions-clicktag.js:actions-clicktag/base/js.2*/
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'whatsapp://send?text=Mira lo que he encontrado  https://goo.gl/maps/Uo15jpoxB262'), dhtml.getVar('landingPageTarget', '_blank'));
+/*#/#*/
+});
 
 if ('click' === 'click') {
     el.style.cursor = 'pointer';
@@ -1092,11 +1111,15 @@ if ('click' === 'click') {
 
 /*#/#*//*#i246.i247.positioning.js:positioning/base/js.2*/
 bmShow('i246');
-/*#/#*//*#i246.i276.actions.js:actions/base/js.1*/
+/*#/#*//*#i246.i292.actions.js:actions/base/js.1*/
 /* Name: On Click; */
 var el = document.getElementById('i246');
 
-
+el.addEventListener('click', function(e){
+    /*#i292.i293.actions-clicktag.js:actions-clicktag/base/js.2*/
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG4')) : window.open(dhtml.getVar('clickTAG4', 'https://twitter.com/home?status=https://goo.gl/maps/Uo15jpoxB262'), dhtml.getVar('landingPageTarget', '_blank'));
+/*#/#*/
+});
 
 if ('click' === 'click') {
     el.style.cursor = 'pointer';
