--- a/H&M cuerna post/Cube2.html
+++ b/H&M cuerna post/Cube2.html
@@ -508,20 +508,20 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 /*#/#*//*#i4.i130.image.css:image/base/css*/
 #i130 { opacity: 1; }
 /*#/#*//*#i130.i131.positioning.css:positioning/base/css.1*/
-#i130 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 300px; height: 250px;
-        -ms-transform: translate(0, 0) translate(-1px, 0px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(-1px, 0px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(-1px, 0px) rotate(0deg);
-        transform: translate(0, 0) translate(-1px, 0px) rotate(0deg);
+#i130 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 300px; height: 435px;
+        -ms-transform: translate(0, 0) translate(0px, -21px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(0px, -21px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(0px, -21px) rotate(0deg);
+        transform: translate(0, 0) translate(0px, -21px) rotate(0deg);
 }
 /*#/#*//*#i4.i224.image.css:image/base/css*/
 #i224 { opacity: 1; }
 /*#/#*//*#i224.i225.positioning.css:positioning/base/css.2*/
 #i224 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 130px; height: 36px;
-        -ms-transform: translate(0, 0) translate(83px, 214px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(83px, 214px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(83px, 214px) rotate(0deg);
-        transform: translate(0, 0) translate(83px, 214px) rotate(0deg);
+        -ms-transform: translate(0, 0) translate(179px, 0px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(179px, 0px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(179px, 0px) rotate(0deg);
+        transform: translate(0, 0) translate(179px, 0px) rotate(0deg);
 }
 /*#/#*//*#i4.i91.shape.css:shape/base/css*/
 #i91 { background-color: #dedede; opacity: 0.00;
@@ -772,7 +772,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
     <!--#i4.i20.shape.html:shape/html-->
 <div id="i20"></div>
 <!--#/#--><!--#i4.i130.image.html:image/html-->
-<img id="i130" src="https://i.imgur.com/qvA6WE4.gif"/>
+<img id="i130" src="https://i.imgur.com/pU2qW95.jpg"/>
 <!--#/#--><!--#i4.i224.image.html:image/html-->
 <img id="i224" src="https://i.imgur.com/ViMLmas.png"/>
 <!--#/#--><!--#i4.i91.shape.html:shape/html-->
@@ -798,7 +798,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
     <!--#i6.i40.shape.html:shape/html-->
 <div id="i40"></div>
 <!--#/#--><!--#i6.i60.image.html:image/html-->
-<img id="i60" src="https://i.imgur.com/ZTMHp5w.gif"/>
+<img id="i60" src="https://i.imgur.com/AQJilwE.jpg"/>
 <!--#/#--><!--#i6.i232.image.html:image/html-->
 <img id="i232" src="https://i.imgur.com/ViMLmas.png"/>
 <!--#/#--><!--#i6.i99.shape.html:shape/html-->
@@ -857,12 +857,12 @@ var el = document.getElementById('i224');
 if ('click' === 'click') {
     el.style.cursor = 'pointer';
 }
-/*#/#*//*#i91.i248.actions.js:actions/base/js.1*/
+/*#/#*//*#i91.i260.actions.js:actions/base/js.1*/
 /* Name: On Click; */
 var el = document.getElementById('i91');
 
 el.addEventListener('click', function(e){
-    /*#i248.i249.actions-clicktag.js:actions-clicktag/base/js.2*/
+    /*#i260.i261.actions-clicktag.js:actions-clicktag/base/js.2*/
     window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'https://goo.gl/maps/Uo15jpoxB262'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
@@ -894,12 +894,12 @@ var el = document.getElementById('i228');
 if ('click' === 'click') {
     el.style.cursor = 'pointer';
 }
-/*#/#*//*#i95.i256.actions.js:actions/base/js.1*/
+/*#/#*//*#i95.i262.actions.js:actions/base/js.1*/
 /* Name: On Click; */
 var el = document.getElementById('i95');
 
 el.addEventListener('click', function(e){
-    /*#i256.i257.actions-clicktag.js:actions-clicktag/base/js.2*/
+    /*#i262.i263.actions-clicktag.js:actions-clicktag/base/js.2*/
     window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'https://goo.gl/maps/Uo15jpoxB262'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
@@ -927,12 +927,12 @@ var el = document.getElementById('i232');
 if ('click' === 'click') {
     el.style.cursor = 'pointer';
 }
-/*#/#*//*#i99.i258.actions.js:actions/base/js.1*/
+/*#/#*//*#i99.i264.actions.js:actions/base/js.1*/
 /* Name: On Click; */
 var el = document.getElementById('i99');
 
 el.addEventListener('click', function(e){
-    /*#i258.i259.actions-clicktag.js:actions-clicktag/base/js.2*/
+    /*#i264.i265.actions-clicktag.js:actions-clicktag/base/js.2*/
     window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'https://goo.gl/maps/Uo15jpoxB262'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
