--- a/H&M cuerna post/Venetian.html
+++ b/H&M cuerna post/Venetian.html
@@ -2228,13 +2228,13 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 /*#/#*//*#i46.image.css:image/base/css*/
 #i46 { opacity: 1; }
 /*#/#*//*#i63.text.css:text/base/css*/
-#i63 { position: absolute; white-space: pre-wrap; opacity: 1; background-color: rgba(255,255,255,0); font-family: Arial, Helvetica, sans-serif; font-size: 16px; color: #000000; font-weight: bold; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
+#i63 { position: absolute; white-space: pre-wrap; opacity: 1; background-color: rgba(255,255,255,0); font-family: Arial, Helvetica, sans-serif; font-size: 17px; color: #000000; font-weight: bold; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
 /*#/#*//*#i63.i64.positioning.css:positioning/base/css.2*/
-#i63 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 303px; height: 52px;
-        -ms-transform: translate(0, 0) translate(9px, 316px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(9px, 316px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(9px, 316px) rotate(0deg);
-        transform: translate(0, 0) translate(9px, 316px) rotate(0deg);
+#i63 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 286px; height: 36px;
+        -ms-transform: translate(0, 0) translate(18px, 309px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(18px, 309px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(18px, 309px) rotate(0deg);
+        transform: translate(0, 0) translate(18px, 309px) rotate(0deg);
 }
 /*#/#*//*#i68.shape.css:shape/base/css*/
 #i68 { background-color: ; opacity: 1;
@@ -2283,6 +2283,15 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         -moz-transform: translate(0, 0) translate(65px, 452px) rotate(0deg);
         transform: translate(0, 0) translate(65px, 452px) rotate(0deg);
 }
+/*#/#*//*#i97.text.css:text/base/css*/
+#i97 { position: absolute; white-space: pre-wrap; opacity: 1; background-color: rgba(255,255,255,0); font-family: Arial, Helvetica, sans-serif; font-size: 15px; color: #000000; font-weight: normal; font-style: normal; text-decoration: none; text-align: left; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
+/*#/#*//*#i97.i98.positioning.css:positioning/base/css.2*/
+#i97 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 273px; height: 24px;
+        -ms-transform: translate(0, 0) translate(27px, 347px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(27px, 347px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(27px, 347px) rotate(0deg);
+        transform: translate(0, 0) translate(27px, 347px) rotate(0deg);
+}
 /*#/#*/
 </style>
 <!--#/#--></head>
@@ -2292,9 +2301,9 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#/#--><!--#i2.slice.html:slice/html-->
 <div id="i2" class="adf-SliceBox">
     <!--#i2.i4.slice-image.html:slice-image/html-->
-<dataimg id="i4" src="https://i.imgur.com/cLPV9tX.jpg"></dataimg>
+<dataimg id="i4" src="https://i.imgur.com/rQG0k65.jpg"></dataimg>
 <!--#/#--><!--#i2.i5.slice-image.html:slice-image/html-->
-<dataimg id="i5" src="https://i.imgur.com/THZBWfN.jpg"></dataimg>
+<dataimg id="i5" src="https://i.imgur.com/cLPV9tX.jpg"></dataimg>
 <!--#/#--><!--#i2.i6.slice-image.html:slice-image/html-->
 <dataimg id="i6" src="https://i.imgur.com/omyIvFm.jpg"></dataimg>
 <!--#/#-->
@@ -2304,7 +2313,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#/#--><!--#i46.image.html:image/html-->
 <img id="i46" src="https://i.imgur.com/ViMLmas.png"/>
 <!--#/#--><!--#i63.text.html:text/html-->
-<div id="i63">¡¡Celebra con nosotros nuestra nueva tienda H&M en Forum Cuernavaca!!</div>
+<div id="i63">Encuentra tu tienda H&M favorita en Forum Cuernavaca.</div>
 <!--#/#--><!--#i68.shape.html:shape/html-->
 <div id="i68"></div>
 <!--#/#--><!--#i73.shape.html:shape/html-->
@@ -2315,6 +2324,8 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <img id="i83" src="https://i.imgur.com/ObtrzfY.png"/>
 <!--#/#--><!--#i85.image.html:image/html-->
 <img id="i85" src="https://i.imgur.com/YN2Vf5g.png"/>
+<!--#/#--><!--#i97.text.html:text/html-->
+<div id="i97">¡Visítanos tenemos ofertas de apertura!</div>
 <!--#/#--><!--#/#--><!--#js:common/js-->
 <script>
 /*#i30.i31.positioning.js:positioning/base/js.2*/
@@ -2375,13 +2386,13 @@ bmShow('i46');
 bmShow('i63');
 /*#/#*//*#i68.i69.positioning.js:positioning/base/js.2*/
 bmShow('i68');
-/*#/#*//*#i68.i93.actions.js:actions/base/js.1*/
+/*#/#*//*#i68.i101.actions.js:actions/base/js.1*/
 /* Name: On Click; */
 var el = document.getElementById('i68');
 
 el.addEventListener('click', function(e){
-    /*#i93.i94.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'https://www.hm.com/mx/'), dhtml.getVar('landingPageTarget', '_blank'));
+    /*#i101.i102.actions-clicktag.js:actions-clicktag/base/js.2*/
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG2')) : window.open(dhtml.getVar('clickTAG2', 'https://www.hm.com/mx/'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -2390,13 +2401,13 @@ if ('click' === 'click') {
 }
 /*#/#*//*#i73.i74.positioning.js:positioning/base/js.2*/
 bmShow('i73');
-/*#/#*//*#i73.i95.actions.js:actions/base/js.1*/
+/*#/#*//*#i73.i99.actions.js:actions/base/js.1*/
 /* Name: On Click; */
 var el = document.getElementById('i73');
 
 el.addEventListener('click', function(e){
-    /*#i95.i96.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG2')) : window.open(dhtml.getVar('clickTAG2', 'https://goo.gl/maps/Uo15jpoxB262'), dhtml.getVar('landingPageTarget', '_blank'));
+    /*#i99.i100.actions-clicktag.js:actions-clicktag/base/js.2*/
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'https://goo.gl/maps/Uo15jpoxB262'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -2413,7 +2424,7 @@ var el = document.getElementById('i81');
 
 el.addEventListener('click', function(e){
     /*#i87.i88.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('')) : window.open(dhtml.getVar('', ''), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'https://www.facebook.com/sharer/sharer.php?u=https://goo.gl/maps/Uo15jpoxB262'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -2430,7 +2441,7 @@ var el = document.getElementById('i83');
 
 el.addEventListener('click', function(e){
     /*#i89.i90.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('')) : window.open(dhtml.getVar('', ''), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG4')) : window.open(dhtml.getVar('clickTAG4', 'whatsapp://send?text=Mira lo que he encontrado  https://goo.gl/maps/Uo15jpoxB262'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -2447,13 +2458,15 @@ var el = document.getElementById('i85');
 
 el.addEventListener('click', function(e){
     /*#i91.i92.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('')) : window.open(dhtml.getVar('', ''), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG5')) : window.open(dhtml.getVar('clickTAG5', 'https://twitter.com/home?status=https://goo.gl/maps/Uo15jpoxB262'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
 if ('click' === 'click') {
     el.style.cursor = 'pointer';
 }
+/*#/#*//*#i97.i98.positioning.js:positioning/base/js.2*/
+bmShow('i97');
 /*#/#*//*#i9.visibility.js:visibility/js*/
 function bmShow(id) {
     var el = document.getElementById(id);
@@ -2475,9 +2488,9 @@ data: /*!*/{}/*!*/;
 name: Slice 1;
 customName: ;
 /*#/#*//*#i2.i4.slice-image.meta:slice-image/meta*/
-name: cLPV9tX.jpg; fileId: ; sourceTypeId: externalUrl;
+name: rQG0k65.jpg; fileId: ; sourceTypeId: externalUrl;
 /*#/#*//*#i2.i5.slice-image.meta:slice-image/meta*/
-name: THZBWfN.jpg; fileId: ; sourceTypeId: externalUrl;
+name: cLPV9tX.jpg; fileId: ; sourceTypeId: externalUrl;
 /*#/#*//*#i2.i6.slice-image.meta:slice-image/meta*/
 name: omyIvFm.jpg; fileId: ; sourceTypeId: externalUrl;
 /*#/#*//*#i2.i3.positioning.meta:positioning/meta.1*/
@@ -2493,7 +2506,7 @@ customName: false;
 /*#/#*//*#i46.i47.positioning.meta:positioning/meta.2*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
 /*#/#*//*#i63.text.meta:text/meta*/
-name: celebra con nosotros nuestra nueva tienda H&M en Forum Cuernavaca.; customName: false;
+name: Encuentra tu tienda H&M favorita en Forum Cuernavaca.; customName: false;
 /*#/#*//*#i63.i64.positioning.meta:positioning/meta.2*/
 data: /*!*/{}/*!*/;
 /*#/#*//*#i68.shape.meta:shape/meta*/
@@ -2519,4 +2532,8 @@ name: YN2Vf5g.png; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: false;
 /*#/#*//*#i85.i86.positioning.meta:positioning/meta.2*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
+/*#/#*//*#i97.text.meta:text/meta*/
+name: ¡Visítanos tenemos ofertas de apertura!; customName: false;
+/*#/#*//*#i97.i98.positioning.meta:positioning/meta.2*/
+data: /*!*/{}/*!*/;
 /*#/#*/--><!--#/#-->
