--- a/H&M Isla Merida/hover-text-big2.html
+++ b/H&M Isla Merida/hover-text-big2.html
@@ -117,7 +117,7 @@
 
             <div class="details">
                 <div style="margin-left: -30px; margin-top:-60px; cursor: pointer;">
-                <a href=" https://goo.gl/maps/2oXXCazozDU2" target="_blank"  style="color: none; text-decoration: none;"><img src="https://i.imgur.com/ovUN94R.jpg"> </a></div>
+                <a href=" https://goo.gl/maps/2oXXCazozDU2" target="_blank"  style="color: none; text-decoration: none;"><img src="https://i.imgur.com/kaYDZlu.jpg"> </a></div>
 
              
 
