--- a/H&M cuerna post/hover-text-big2.html
+++ b/H&M cuerna post/hover-text-big2.html
@@ -117,7 +117,7 @@
 
             <div class="details">
                 <div style="margin-left: -30px; margin-top:-60px; cursor: pointer;">
-                <a href="https://goo.gl/maps/Uo15jpoxB262" target="_blank"  style="color: none; text-decoration: none;"><img src="https://i.imgur.com/NEcxMAx.jpg"> </a></div>
+                <a href="https://goo.gl/maps/Uo15jpoxB262" target="_blank"  style="color: none; text-decoration: none;"><img src="https://i.imgur.com/dFIXQVK.jpg"> </a></div>
 
              
 
