--- a/H&M Marzo/fade-hover3.html
+++ b/H&M Marzo/fade-hover3.html
@@ -83,7 +83,7 @@
         }
 
         .bg.cover-1 {
-            background: url("https://i.imgur.com/Y8NjGx0.jpg");
+            background: url("https://i.imgur.com/uYP1vIT.jpg");
             background-size: cover;
             
 
