--- a/Cinemex Platino/hover-text-big3.html
+++ b/Cinemex Platino/hover-text-big3.html
@@ -109,7 +109,7 @@
 
             <div class="details">
                 <div style="margin-left: -30px; margin-top:-60px; cursor: pointer;">
-                <a href="https://goo.gl/maps/LDRkjLRzVUF2" target="_blank"  style="color: none; text-decoration: none;"><img src="https://i.imgur.com/2X353Xf.png"> </a></div>
+                <a href="https://goo.gl/maps/LDRkjLRzVUF2" target="_blank"  style="color: none; text-decoration: none;"><img src="https://i.imgur.com/JlEu3mb.png"> </a></div>
 
              
 
