--- a/H&M Isla Merida Post/Cube.html
+++ b/H&M Isla Merida Post/Cube.html
@@ -844,7 +844,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
     <!--#i4.i20.shape.html:shape/html-->
 <div id="i20"></div>
 <!--#/#--><!--#i4.i14.text.html:text/html-->
-<div id="i14">¡Ya abrimos! Visita nuestra tienda favorita:  H&M FORUM CUERNAVACA</div>
+<div id="i14">¡Ya abrimos! Visita nuestra tienda favorita: H&M Isla Mérida</div>
 <!--#/#--><!--#i4.i130.image.html:image/html-->
 <img id="i130" src="https://i.imgur.com/0wQg4X8.jpg"/>
 <!--#/#--><!--#i4.i224.image.html:image/html-->
@@ -864,7 +864,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
     <!--#i5.i30.shape.html:shape/html-->
 <div id="i30"></div>
 <!--#/#--><!--#i5.i58.image.html:image/html-->
-<img id="i58" src="https://i.imgur.com/U3wNqoB.jpg"/>
+<img id="i58" src="https://i.imgur.com/zuSjyfj.jpg"/>
 <!--#/#--><!--#i5.i216.image.html:image/html-->
 <img id="i216" src="https://i.imgur.com/HbSUPGt.png"/>
 <!--#/#--><!--#i5.i228.image.html:image/html-->
@@ -962,7 +962,7 @@ var el = document.getElementById('i236');
 
 el.addEventListener('click', function(e){
     /*#i282.i283.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG2')) : window.open(dhtml.getVar('clickTAG2', 'https://www.facebook.com/sharer/sharer.php?u= https://goo.gl/maps/Uo15jpoxB262'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG2')) : window.open(dhtml.getVar('clickTAG2', 'https://www.facebook.com/sharer/sharer.php?u= https://goo.gl/maps/2oXXCazozDU2'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -979,7 +979,7 @@ var el = document.getElementById('i238');
 
 el.addEventListener('click', function(e){
     /*#i284.i285.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'whatsapp://send?text=Mira lo que he encontrado  https://goo.gl/maps/Uo15jpoxB262'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'whatsapp://send?text=Mira lo que he encontrado  https://goo.gl/maps/2oXXCazozDU2'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -996,7 +996,7 @@ var el = document.getElementById('i240');
 
 el.addEventListener('click', function(e){
     /*#i286.i287.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG4')) : window.open(dhtml.getVar('clickTAG4', 'https://twitter.com/home?status=https://goo.gl/maps/Uo15jpoxB262'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG4')) : window.open(dhtml.getVar('clickTAG4', 'https://twitter.com/home?status=https://goo.gl/maps/2oXXCazozDU2'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -1033,7 +1033,7 @@ var el = document.getElementById('i95');
 
 el.addEventListener('click', function(e){
     /*#i280.i281.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'https://goo.gl/maps/Uo15jpoxB262'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'https://goo.gl/maps/2oXXCazozDU2'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -1066,7 +1066,7 @@ var el = document.getElementById('i99');
 
 el.addEventListener('click', function(e){
     /*#i278.i279.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'https://goo.gl/maps/Uo15jpoxB262'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'https://goo.gl/maps/2oXXCazozDU2'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -1083,7 +1083,7 @@ var el = document.getElementById('i242');
 
 el.addEventListener('click', function(e){
     /*#i288.i289.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG2')) : window.open(dhtml.getVar('clickTAG2', 'https://www.facebook.com/sharer/sharer.php?u= https://goo.gl/maps/Uo15jpoxB262'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG2')) : window.open(dhtml.getVar('clickTAG2', 'https://www.facebook.com/sharer/sharer.php?u= https://goo.gl/maps/2oXXCazozDU2'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -1100,7 +1100,7 @@ var el = document.getElementById('i244');
 
 el.addEventListener('click', function(e){
     /*#i290.i291.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'whatsapp://send?text=Mira lo que he encontrado  https://goo.gl/maps/Uo15jpoxB262'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'whatsapp://send?text=Mira lo que he encontrado  https://goo.gl/maps/2oXXCazozDU2'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -1117,7 +1117,7 @@ var el = document.getElementById('i246');
 
 el.addEventListener('click', function(e){
     /*#i292.i293.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG4')) : window.open(dhtml.getVar('clickTAG4', 'https://twitter.com/home?status=https://goo.gl/maps/Uo15jpoxB262'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG4')) : window.open(dhtml.getVar('clickTAG4', 'https://twitter.com/home?status=https://goo.gl/maps/2oXXCazozDU2'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
