--- a/H&M Isla Merida Post/Cube2.html
+++ b/H&M Isla Merida Post/Cube2.html
@@ -772,7 +772,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
     <!--#i4.i20.shape.html:shape/html-->
 <div id="i20"></div>
 <!--#/#--><!--#i4.i130.image.html:image/html-->
-<img id="i130" src="https://i.imgur.com/pU2qW95.jpg"/>
+<img id="i130" src="https://i.imgur.com/gMpgu2h.jpg"/>
 <!--#/#--><!--#i4.i224.image.html:image/html-->
 <img id="i224" src="https://i.imgur.com/ViMLmas.png"/>
 <!--#/#--><!--#i4.i91.shape.html:shape/html-->
@@ -784,7 +784,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
     <!--#i5.i30.shape.html:shape/html-->
 <div id="i30"></div>
 <!--#/#--><!--#i5.i58.image.html:image/html-->
-<img id="i58" src="https://i.imgur.com/U3wNqoB.jpg"/>
+<img id="i58" src="https://i.imgur.com/zuSjyfj.jpg"/>
 <!--#/#--><!--#i5.i216.image.html:image/html-->
 <img id="i216" src="https://i.imgur.com/HbSUPGt.png"/>
 <!--#/#--><!--#i5.i228.image.html:image/html-->
@@ -863,7 +863,7 @@ var el = document.getElementById('i91');
 
 el.addEventListener('click', function(e){
     /*#i260.i261.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'https://goo.gl/maps/Uo15jpoxB262'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'https://goo.gl/maps/2oXXCazozDU2'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -900,7 +900,7 @@ var el = document.getElementById('i95');
 
 el.addEventListener('click', function(e){
     /*#i262.i263.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'https://goo.gl/maps/Uo15jpoxB262'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'https://goo.gl/maps/2oXXCazozDU2'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -933,7 +933,7 @@ var el = document.getElementById('i99');
 
 el.addEventListener('click', function(e){
     /*#i264.i265.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'https://goo.gl/maps/Uo15jpoxB262'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'https://goo.gl/maps/2oXXCazozDU2'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
