--- a/H&M Isla Merida Post/fade-completo.html
+++ b/H&M Isla Merida Post/fade-completo.html
@@ -83,7 +83,7 @@
         }
 
         .bg.cover-1 {
-            background: url("https://i.imgur.com/54ZodOm.jpg");
+            background: url("https://i.imgur.com/dxvZC47.png");
             background-size: cover;
             
 
@@ -97,7 +97,7 @@
         }
 
         .bg.cover-3 {
-            background: url("https://i.imgur.com/EDHygAU.jpg");
+            background: url("https://i.imgur.com/EuZ6SSJ.png");
             background-size: cover;
           
         }
