--- a/H&M Isla Merida Post/fade-hover3.html
+++ b/H&M Isla Merida Post/fade-hover3.html
@@ -83,14 +83,14 @@
         }
 
         .bg.cover-1 {
-            background: url("https://i.imgur.com/k4NuZGa.jpg");
+            background: url("https://i.imgur.com/dxvZC47.png");
             background-size: cover;
             
 
         }
 
         .bg.cover-2 {
-            background: url("https://i.imgur.com/PWV7a2D.jpg");
+            background: url("https://i.imgur.com/Zxlweym.png");
             background-size: cover;
 
             
