--- a/H&M Isla Merida Post/Cube2.html
+++ b/H&M Isla Merida Post/Cube2.html
@@ -508,7 +508,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 /*#/#*//*#i4.i130.image.css:image/base/css*/
 #i130 { opacity: 1; }
 /*#/#*//*#i130.i131.positioning.css:positioning/base/css.1*/
-#i130 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 300px; height: 435px;
+#i130 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 300px; height: 250px;
         -ms-transform: translate(0, 0) translate(0px, -21px) rotate(0deg);
         -webkit-transform: translate(0, 0) translate(0px, -21px) rotate(0deg);
         -moz-transform: translate(0, 0) translate(0px, -21px) rotate(0deg);
@@ -772,7 +772,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
     <!--#i4.i20.shape.html:shape/html-->
 <div id="i20"></div>
 <!--#/#--><!--#i4.i130.image.html:image/html-->
-<img id="i130" src="https://i.imgur.com/gMpgu2h.jpg"/>
+<img id="i130" src="https://i.imgur.com/AKkOnvv.png"/>
 <!--#/#--><!--#i4.i224.image.html:image/html-->
 <img id="i224" src="https://i.imgur.com/ViMLmas.png"/>
 <!--#/#--><!--#i4.i91.shape.html:shape/html-->
