--- a/H&M Isla Merida Post/fade-completo.html
+++ b/H&M Isla Merida Post/fade-completo.html
@@ -90,7 +90,7 @@
         }
 
         .bg.cover-2 {
-            background: url("https://i.imgur.com/TcGaHgi.jpg");
+            background: url("https://i.imgur.com/dUlLxLG.png");
             background-size: cover;
 
             
