--- a/H&M Isla Merida Post/hover-text-big2.html
+++ b/H&M Isla Merida Post/hover-text-big2.html
@@ -111,7 +111,7 @@
 
             <div class="details">
                 <div style="margin-left: -30px; margin-top:-60px; cursor: pointer;">
-                <a href="%click_url_unesc%" target="_blank"  style="color: none; text-decoration: none;"><img src="https://i.imgur.com/dFIXQVK.jpg"> </a></div>
+                <a href="%click_url_unesc%" target="_blank"  style="color: none; text-decoration: none;"><img src="https://i.imgur.com/kaYDZlu.jpg"> </a></div>
 
              
 
