--- a/H&M Isla Merida Post/fade-hover3.html
+++ b/H&M Isla Merida Post/fade-hover3.html
@@ -97,14 +97,14 @@
         }
 
         .bg.cover-3 {
-            background: url("https://i.imgur.com/Bcx1XiF.jpg");
+            background: url("https://i.imgur.com/kLpwUgF.png");
             background-size: cover;
           
         }
 
          .cta {
             position: absolute;
-            margin-top: 455px;
+            margin-top: 445px;
             width:230px;
             line-height: 1.3em;
             z-index: 5;
