--- a/H&M Isla Merida Post/Cube.html
+++ b/H&M Isla Merida Post/Cube.html
@@ -864,7 +864,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
     <!--#i5.i30.shape.html:shape/html-->
 <div id="i30"></div>
 <!--#/#--><!--#i5.i58.image.html:image/html-->
-<img id="i58" src="https://i.imgur.com/zuSjyfj.jpg"/>
+<img id="i58" src="https://i.imgur.com/FSoaXNK.png"/>
 <!--#/#--><!--#i5.i216.image.html:image/html-->
 <img id="i216" src="https://i.imgur.com/HbSUPGt.png"/>
 <!--#/#--><!--#i5.i228.image.html:image/html-->
