--- a/H&M Isla Merida Post/fade-completo.html
+++ b/H&M Isla Merida Post/fade-completo.html
@@ -356,20 +356,20 @@
        <div class="te-container">
 
     
-  <div class="cta"> <a href="https://goo.gl/maps/Uo15jpoxB262" target="_blank"> <img src="https://i.imgur.com/5xUBE8Y.png" style="height: 35px;"></a></div>   
+  <div class="cta"> <a href="https://goo.gl/maps/2oXXCazozDU2" target="_blank"> <img src="https://i.imgur.com/5xUBE8Y.png" style="height: 35px;"></a></div>   
   
      
   
   <div class="value_wrapper carousel-wrapper size_320x480">
 
      <div id="botones-para-compartir" style="display:inline;float:left;margin-top:570px;margin-left:7px;"><span>  
-                        <a class="shared" href="https://www.facebook.com/sharer/sharer.php?u=  https://goo.gl/maps/Uo15jpoxB262"  target="block">    
+                        <a class="shared" href="https://www.facebook.com/sharer/sharer.php?u=  https://goo.gl/maps/2oXXCazozDU2"  target="block">    
                         <img alt="compartir en facebook" class="facebooki" height="21" src="https://i.imgur.com/mJBNNLr.png" title="compartir en facebook" width="21" /></a>
 
-                            <a class="shared" href="whatsapp://send?text=Mira lo que he encontrado  https://goo.gl/maps/Uo15jpoxB262" target="block">
+                            <a class="shared" href="whatsapp://send?text=Mira lo que he encontrado  https://goo.gl/maps/2oXXCazozDU2" target="block">
                             <img alt="compartir en google+" class="googlei" height="21" src="https://i.imgur.com/ObtrzfY.png" title="compartir en whatsapp" width="21" /></a>
 
-                            <a class="shared" href="https://twitter.com/home?status=https://goo.gl/maps/Uo15jpoxB262" target="block">
+                            <a class="shared" href="https://twitter.com/home?status=https://goo.gl/maps/2oXXCazozDU2" target="block">
                             <img alt="compartir en twitter" class="twitteri" height="21" src="https://i.imgur.com/YN2Vf5g.png" title="compartir en twitter" width="21" /></a>
                     </span></div>
    
