--- a/H&M Isla Merida Post/fade-hover3.html
+++ b/H&M Isla Merida Post/fade-hover3.html
@@ -356,7 +356,7 @@
        <div class="te-container">
 
     
-  <div class="cta"> <a href=" https://goo.gl/maps/Uo15jpoxB262" target="_blank"> <img src="https://i.imgur.com/5xUBE8Y.png" style="height: 35px;"></a></div>   
+  <div class="cta"> <a href="https://goo.gl/maps/2oXXCazozDU2" target="_blank"> <img src="https://i.imgur.com/5xUBE8Y.png" style="height: 35px;"></a></div>   
   
      
   
