--- a/H&M Isla Merida Post/Cube.html
+++ b/H&M Isla Merida Post/Cube.html
@@ -846,7 +846,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#/#--><!--#i4.i14.text.html:text/html-->
 <div id="i14">¡Ya abrimos! Visita nuestra tienda favorita: H&M Isla Mérida</div>
 <!--#/#--><!--#i4.i130.image.html:image/html-->
-<img id="i130" src="https://i.imgur.com/0wQg4X8.jpg"/>
+<img id="i130" src="https://i.imgur.com/huIksGt.png"/>
 <!--#/#--><!--#i4.i224.image.html:image/html-->
 <img id="i224" src="https://i.imgur.com/ViMLmas.png"/>
 <!--#/#--><!--#i4.i91.shape.html:shape/html-->
@@ -878,7 +878,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
     <!--#i6.i40.shape.html:shape/html-->
 <div id="i40"></div>
 <!--#/#--><!--#i6.i60.image.html:image/html-->
-<img id="i60" src="https://i.imgur.com/TgXdg00.jpg"/>
+<img id="i60" src="https://i.imgur.com/SjSff6U.png"/>
 <!--#/#--><!--#i6.i34.text.html:text/html-->
 <div id="i34">¡Visítanos, tenemos ofertas de apertura!</div>
 <!--#/#--><!--#i6.i232.image.html:image/html-->
