--- a/H&M Isla Merida Post/Cube2.html
+++ b/H&M Isla Merida Post/Cube2.html
@@ -798,7 +798,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
     <!--#i6.i40.shape.html:shape/html-->
 <div id="i40"></div>
 <!--#/#--><!--#i6.i60.image.html:image/html-->
-<img id="i60" src="https://i.imgur.com/zu24cey.png"/>
+<img id="i60" src="https://i.imgur.com/Ngq6h0o.png"/>
 <!--#/#--><!--#i6.i232.image.html:image/html-->
 <img id="i232" src="https://i.imgur.com/ViMLmas.png"/>
 <!--#/#--><!--#i6.i99.shape.html:shape/html-->
