--- a/H&M Isla Merida Post/Venetian.html
+++ b/H&M Isla Merida Post/Venetian.html
@@ -2219,7 +2219,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
     visibility: hidden !important;
 }
 /*#/#*//*#i44.i45.positioning.css:positioning/base/css.2*/
-#i44 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 320px; height: 116px;
+#i44 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 320px; height: 127px;
         -ms-transform: translate(0, 0) translate(0px, 371px) rotate(0deg);
         -webkit-transform: translate(0, 0) translate(0px, 371px) rotate(0deg);
         -moz-transform: translate(0, 0) translate(0px, 371px) rotate(0deg);
@@ -2227,6 +2227,15 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 }
 /*#/#*//*#i46.image.css:image/base/css*/
 #i46 { opacity: 1; }
+/*#/#*//*#i97.text.css:text/base/css*/
+#i97 { position: absolute; white-space: pre-wrap; opacity: 1; background-color: rgba(255,255,255,0); font-family: Arial, Helvetica, sans-serif; font-size: 15px; color: #000000; font-weight: normal; font-style: normal; text-decoration: none; text-align: left; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
+/*#/#*//*#i97.i98.positioning.css:positioning/base/css.2*/
+#i97 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 273px; height: 24px;
+        -ms-transform: translate(0, 0) translate(27px, 347px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(27px, 347px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(27px, 347px) rotate(0deg);
+        transform: translate(0, 0) translate(27px, 347px) rotate(0deg);
+}
 /*#/#*//*#i63.text.css:text/base/css*/
 #i63 { position: absolute; white-space: pre-wrap; opacity: 1; background-color: rgba(255,255,255,0); font-family: Arial, Helvetica, sans-serif; font-size: 17px; color: #000000; font-weight: bold; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
 /*#/#*//*#i63.i64.positioning.css:positioning/base/css.2*/
@@ -2236,25 +2245,25 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         -moz-transform: translate(0, 0) translate(18px, 309px) rotate(0deg);
         transform: translate(0, 0) translate(18px, 309px) rotate(0deg);
 }
-/*#/#*//*#i68.shape.css:shape/base/css*/
-#i68 { background-color: ; opacity: 1;
+/*#/#*//*#i103.shape.css:shape/base/css*/
+#i103 { background-color: ; opacity: 1;
 }
-/*#/#*//*#i68.i69.positioning.css:positioning/base/css.2*/
-#i68 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 100%; height: 73.125%;
+/*#/#*//*#i103.i104.positioning.css:positioning/base/css.2*/
+#i103 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 100%; height: 68.33333333333333%;
         -ms-transform: translate(0, 0) translate(0px, -1px) rotate(0deg);
         -webkit-transform: translate(0, 0) translate(0px, -1px) rotate(0deg);
         -moz-transform: translate(0, 0) translate(0px, -1px) rotate(0deg);
         transform: translate(0, 0) translate(0px, -1px) rotate(0deg);
 }
-/*#/#*//*#i73.shape.css:shape/base/css*/
-#i73 { background-color: ; opacity: 1;
+/*#/#*//*#i68.shape.css:shape/base/css*/
+#i68 { background-color: ; opacity: 1;
 }
-/*#/#*//*#i73.i74.positioning.css:positioning/base/css.2*/
-#i73 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 100%; height: 26.458333333333332%;
-        -ms-transform: translate(0, 0) translate(0px, 352px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(0px, 352px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(0px, 352px) rotate(0deg);
-        transform: translate(0, 0) translate(0px, 352px) rotate(0deg);
+/*#/#*//*#i68.i69.positioning.css:positioning/base/css.2*/
+#i68 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 100%; height: 27.916666666666668%;
+        -ms-transform: translate(0, 0) translate(0px, 345px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(0px, 345px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(0px, 345px) rotate(0deg);
+        transform: translate(0, 0) translate(0px, 345px) rotate(0deg);
 }
 /*#/#*//*#i81.image.css:image/base/css*/
 #i81 { opacity: 1; }
@@ -2283,15 +2292,6 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         -moz-transform: translate(0, 0) translate(65px, 452px) rotate(0deg);
         transform: translate(0, 0) translate(65px, 452px) rotate(0deg);
 }
-/*#/#*//*#i97.text.css:text/base/css*/
-#i97 { position: absolute; white-space: pre-wrap; opacity: 1; background-color: rgba(255,255,255,0); font-family: Arial, Helvetica, sans-serif; font-size: 15px; color: #000000; font-weight: normal; font-style: normal; text-decoration: none; text-align: left; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
-/*#/#*//*#i97.i98.positioning.css:positioning/base/css.2*/
-#i97 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 273px; height: 24px;
-        -ms-transform: translate(0, 0) translate(27px, 347px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(27px, 347px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(27px, 347px) rotate(0deg);
-        transform: translate(0, 0) translate(27px, 347px) rotate(0deg);
-}
 /*#/#*/
 </style>
 <!--#/#--></head>
@@ -2301,31 +2301,29 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#/#--><!--#i2.slice.html:slice/html-->
 <div id="i2" class="adf-SliceBox">
     <!--#i2.i4.slice-image.html:slice-image/html-->
-<dataimg id="i4" src="https://i.imgur.com/rQG0k65.jpg"></dataimg>
+<dataimg id="i4" src="https://i.imgur.com/ZnVa6I1.png"></dataimg>
 <!--#/#--><!--#i2.i5.slice-image.html:slice-image/html-->
-<dataimg id="i5" src="https://i.imgur.com/cLPV9tX.jpg"></dataimg>
-<!--#/#--><!--#i2.i6.slice-image.html:slice-image/html-->
-<dataimg id="i6" src="https://i.imgur.com/omyIvFm.jpg"></dataimg>
+<dataimg id="i5" src="https://i.imgur.com/GlZQjdL.png"></dataimg>
 <!--#/#-->
 </div>
 <!--#/#--><!--#i44.image.html:image/html-->
-<img id="i44" src="https://i.imgur.com/jUmq202.jpg"/>
+<img id="i44" src="https://i.imgur.com/FSoaXNK.png"/>
 <!--#/#--><!--#i46.image.html:image/html-->
 <img id="i46" src="https://i.imgur.com/ViMLmas.png"/>
+<!--#/#--><!--#i97.text.html:text/html-->
+<div id="i97">¡Visítanos tenemos ofertas de apertura!</div>
 <!--#/#--><!--#i63.text.html:text/html-->
 <div id="i63">Encuentra tu tienda H&M favorita en Isla Mérida.</div>
+<!--#/#--><!--#i103.shape.html:shape/html-->
+<div id="i103"></div>
 <!--#/#--><!--#i68.shape.html:shape/html-->
 <div id="i68"></div>
-<!--#/#--><!--#i73.shape.html:shape/html-->
-<div id="i73"></div>
 <!--#/#--><!--#i81.image.html:image/html-->
 <img id="i81" src="https://i.imgur.com/mJBNNLr.png"/>
 <!--#/#--><!--#i83.image.html:image/html-->
 <img id="i83" src="https://i.imgur.com/ObtrzfY.png"/>
 <!--#/#--><!--#i85.image.html:image/html-->
 <img id="i85" src="https://i.imgur.com/YN2Vf5g.png"/>
-<!--#/#--><!--#i97.text.html:text/html-->
-<div id="i97">¡Visítanos tenemos ofertas de apertura!</div>
 <!--#/#--><!--#/#--><!--#js:common/js-->
 <script>
 /*#i30.i31.positioning.js:positioning/base/js.2*/
@@ -2372,8 +2370,6 @@ document.addEventListener('DOMContentLoaded', function() {
 
 /*#/#*//*#i2.i5.slice-image.js:slice-image/base/js*/
 
-/*#/#*//*#i2.i6.slice-image.js:slice-image/base/js*/
-
 /*#/#*//*#i44.image.js:image/base/js*/
 
 /*#/#*//*#i44.i45.positioning.js:positioning/base/js.2*/
@@ -2382,6 +2378,8 @@ bmShow('i44');
 
 /*#/#*//*#i46.i47.positioning.js:positioning/base/js.2*/
 bmShow('i46');
+/*#/#*//*#i97.i98.positioning.js:positioning/base/js.2*/
+bmShow('i97');
 /*#/#*//*#i63.i64.positioning.js:positioning/base/js.2*/
 bmShow('i63');
 /*#/#*//*#i68.i69.positioning.js:positioning/base/js.2*/
@@ -2392,22 +2390,22 @@ var el = document.getElementById('i68');
 
 el.addEventListener('click', function(e){
     /*#i101.i102.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG2')) : window.open(dhtml.getVar('clickTAG2', 'https://www.hm.com/mx/'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'https://goo.gl/maps/2oXXCazozDU2'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
 if ('click' === 'click') {
     el.style.cursor = 'pointer';
 }
-/*#/#*//*#i73.i74.positioning.js:positioning/base/js.2*/
-bmShow('i73');
-/*#/#*//*#i73.i99.actions.js:actions/base/js.1*/
+/*#/#*//*#i103.i104.positioning.js:positioning/base/js.2*/
+bmShow('i103');
+/*#/#*//*#i103.i105.actions.js:actions/base/js.1*/
 /* Name: On Click; */
-var el = document.getElementById('i73');
+var el = document.getElementById('i103');
 
 el.addEventListener('click', function(e){
-    /*#i99.i100.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'https://goo.gl/maps/2oXXCazozDU2'), dhtml.getVar('landingPageTarget', '_blank'));
+    /*#i105.i106.actions-clicktag.js:actions-clicktag/base/js.2*/
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG2')) : window.open(dhtml.getVar('clickTAG2', 'https://www.hm.com/mx/'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -2441,7 +2439,7 @@ var el = document.getElementById('i83');
 
 el.addEventListener('click', function(e){
     /*#i89.i90.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG4')) : window.open(dhtml.getVar('clickTAG4', 'whatsapp://send?text=Mira lo que he encontrado  https://goo.gl/maps/2oXXCazozDU2'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG4')) : window.open(dhtml.getVar('clickTAG4', 'http://whatsapp.com'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -2465,8 +2463,6 @@ el.addEventListener('click', function(e){
 if ('click' === 'click') {
     el.style.cursor = 'pointer';
 }
-/*#/#*//*#i97.i98.positioning.js:positioning/base/js.2*/
-bmShow('i97');
 /*#/#*//*#i9.visibility.js:visibility/js*/
 function bmShow(id) {
     var el = document.getElementById(id);
@@ -2488,34 +2484,36 @@ data: /*!*/{}/*!*/;
 name: Slice 1;
 customName: ;
 /*#/#*//*#i2.i4.slice-image.meta:slice-image/meta*/
-name: rQG0k65.jpg; fileId: ; sourceTypeId: externalUrl;
+name: ZnVa6I1.png; fileId: ; sourceTypeId: externalUrl;
 /*#/#*//*#i2.i5.slice-image.meta:slice-image/meta*/
-name: cLPV9tX.jpg; fileId: ; sourceTypeId: externalUrl;
-/*#/#*//*#i2.i6.slice-image.meta:slice-image/meta*/
-name: omyIvFm.jpg; fileId: ; sourceTypeId: externalUrl;
+name: GlZQjdL.png; fileId: ; sourceTypeId: externalUrl;
 /*#/#*//*#i2.i3.positioning.meta:positioning/meta.1*/
 data: /*!*/{}/*!*/;
 /*#/#*//*#i44.image.meta:image/meta*/
-name: jUmq202.jpg; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
+name: FSoaXNK.png; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: false;
 /*#/#*//*#i44.i45.positioning.meta:positioning/meta.2*/
-data: /*!*/{"keepAspectRatio":false}/*!*/;
+data: /*!*/{"keepAspectRatio":true}/*!*/;
 /*#/#*//*#i46.image.meta:image/meta*/
 name: ViMLmas.png; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: false;
 /*#/#*//*#i46.i47.positioning.meta:positioning/meta.2*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
+/*#/#*//*#i97.text.meta:text/meta*/
+name: ¡Visítanos tenemos ofertas de apertura!; customName: false;
+/*#/#*//*#i97.i98.positioning.meta:positioning/meta.2*/
+data: /*!*/{}/*!*/;
 /*#/#*//*#i63.text.meta:text/meta*/
 name: Encuentra tu tienda H&M favorita en Forum Cuernavaca.; customName: false;
 /*#/#*//*#i63.i64.positioning.meta:positioning/meta.2*/
 data: /*!*/{}/*!*/;
+/*#/#*//*#i103.shape.meta:shape/meta*/
+name: Shape 3;
+/*#/#*//*#i103.i104.positioning.meta:positioning/meta.2*/
+data: /*!*/{}/*!*/;
 /*#/#*//*#i68.shape.meta:shape/meta*/
 name: Shape 2;
 /*#/#*//*#i68.i69.positioning.meta:positioning/meta.2*/
-data: /*!*/{}/*!*/;
-/*#/#*//*#i73.shape.meta:shape/meta*/
-name: Shape 3;
-/*#/#*//*#i73.i74.positioning.meta:positioning/meta.2*/
 data: /*!*/{}/*!*/;
 /*#/#*//*#i81.image.meta:image/meta*/
 name: mJBNNLr.png; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
@@ -2532,8 +2530,4 @@ name: YN2Vf5g.png; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: false;
 /*#/#*//*#i85.i86.positioning.meta:positioning/meta.2*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
-/*#/#*//*#i97.text.meta:text/meta*/
-name: ¡Visítanos tenemos ofertas de apertura!; customName: false;
-/*#/#*//*#i97.i98.positioning.meta:positioning/meta.2*/
-data: /*!*/{}/*!*/;
 /*#/#*/--><!--#/#-->
