--- a/Cinemex Platino/hover-text-big3.html
+++ b/Cinemex Platino/hover-text-big3.html
@@ -103,7 +103,7 @@
 
             <div class="imgBx">
                 
-                <img src="https://i.imgur.com/alXs1vu.gif">
+                <img src="https://i.imgur.com/BV8oh4V.gif">
             </div>
 
 
