--- a/H&M Isla Merida/hover-text-big2.html
+++ b/H&M Isla Merida/hover-text-big2.html
@@ -111,7 +111,7 @@
 
             <div class="imgBx">
                 
-              <iframe  src="fade-hover3.html" width="300" height="600" frameborder="0" scrolling="no" align="center"></iframe>
+              <iframe  src="https://i.imgur.com/rs1zE3C.jpg" width="300" height="600" frameborder="0" scrolling="no" align="center"></iframe>
             </div>
 
 
