--- a/H&M Isla Merida/hover-text-big2.html
+++ b/H&M Isla Merida/hover-text-big2.html
@@ -111,13 +111,13 @@
 
             <div class="imgBx">
                 
-              <iframe  src="https://i.imgur.com/rs1zE3C.jpg" width="300" height="600" frameborder="0" scrolling="no" align="center"></iframe>
+              <iframe  src="fade-hover3.html" width="300" height="600" frameborder="0" scrolling="no" align="center"></iframe>
             </div>
 
 
             <div class="details">
                 <div style="margin-left: -30px; margin-top:-60px; cursor: pointer;">
-                <a href=" https://goo.gl/maps/2oXXCazozDU2" target="_blank"  style="color: none; text-decoration: none;"><img src="https://i.imgur.com/kaYDZlu.jpg"> </a></div>
+                <a href="https://goo.gl/maps/2oXXCazozDU2" target="_blank"  style="color: none; text-decoration: none;"><img src="https://i.imgur.com/kaYDZlu.jpg"> </a></div>
 
              
 
