--- a/Victorias secret/Cube.html
+++ b/Victorias secret/Cube.html
@@ -864,7 +864,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#/#--><!--#i4.i14.text.html:text/html-->
 <div id="i14">¿Ya sabes dónde adquirir tu lencería ideal? ¡Estamos cerca de tí!</div>
 <!--#/#--><!--#i4.i130.image.html:image/html-->
-<img id="i130" src="https://i.imgur.com/KQinLmx.jpg"/>
+<img id="i130" src="https://i.imgur.com/YNpOffr.png"/>
 <!--#/#--><!--#i4.i214.image.html:image/html-->
 <img id="i214" src="https://i.imgur.com/4W22b7q.png"/>
 <!--#/#--><!--#i4.i91.shape.html:shape/html-->
@@ -898,7 +898,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
     <!--#i6.i40.shape.html:shape/html-->
 <div id="i40"></div>
 <!--#/#--><!--#i6.i60.image.html:image/html-->
-<img id="i60" src="https://i.imgur.com/3rNsjPu.jpg"/>
+<img id="i60" src="https://i.imgur.com/Ux2LPR1.jpg"/>
 <!--#/#--><!--#i6.i218.image.html:image/html-->
 <img id="i218" src="https://i.imgur.com/4W22b7q.png"/>
 <!--#/#--><!--#i6.i34.text.html:text/html-->
