--- a/Victorias secret/Venetian.html
+++ b/Victorias secret/Venetian.html
@@ -2310,11 +2310,11 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#/#--><!--#i2.slice.html:slice/html-->
 <div id="i2" class="adf-SliceBox">
     <!--#i2.i4.slice-image.html:slice-image/html-->
-<dataimg id="i4" src="https://i.imgur.com/AEGJrxA.jpg"></dataimg>
+<dataimg id="i4" src="https://i.imgur.com/SOdAqcd.png"></dataimg>
 <!--#/#--><!--#i2.i5.slice-image.html:slice-image/html-->
-<dataimg id="i5" src="https://i.imgur.com/ua3gfPa.jpg"></dataimg>
+<dataimg id="i5" src="https://i.imgur.com/V3tXrkw.png"></dataimg>
 <!--#/#--><!--#i2.i6.slice-image.html:slice-image/html-->
-<dataimg id="i6" src="https://i.imgur.com/OgYvJyf.jpg"></dataimg>
+<dataimg id="i6" src="https://i.imgur.com/KDQBAck.png"></dataimg>
 <!--#/#--><!--#i2.i72.slice-image.html:slice-image/html.1-->
 <dataimg id="i72" src="https://i.imgur.com/WbBQX2Q.jpg"></dataimg>
 <!--#/#-->
